--- a/src/components/messages/Messenger.css
+++ b/src/components/messages/Messenger.css
@@ -8,12 +8,9 @@
 .chatBox {
   flex: 7;
 }
-.chatOnline {
-  flex: 3;
-}
+
 .chatMenuRapper,
-.chatBoxRapper,
-.chatOnlineRapper {
+.chatBoxRapper {
   padding: 10px;
 
 
@@ -22,7 +19,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  position: relative;
+  /* position: relative; */
 }
 .chatMenuInput{
 width: 90%;
@@ -63,10 +60,10 @@ background-color: aliceblue;
   display: flex;
   flex-direction: column;
 }
-.nochat{
-  position: relative;
-  top:10%;
-  color: #808080;
-  text-align: center;
-  font-size: 50px;
-}
+  .nochat{
+    /* position: relative; */
+    top:10%;
+    color: #808080;
+    text-align: center;
+    font-size: 50px;
+  }
