--- a/src/components/messages/Messenger.css
+++ b/src/components/messages/Messenger.css
@@ -31,12 +31,13 @@ border-bottom: 1px solid #808080 ;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 900px;
 }
 .chatIntput{
-width: 80%;
-height: 90px;
-padding: 0px;
-background-color: aliceblue;
+  width: 500px;
+  height: 90px;
+  padding: 0px;
+  background-color: aliceblue;
 }
 .buttonSend{
   margin: 20px 50px  ;
